added the function to get the current weather and appendd it to the curret weather div

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Hello, world!</title>
 </head>
 
@@ -23,11 +23,11 @@
                 <h2>
                     City:
                 </h2>
-                <span><input type="text" id="city"><button class="btn btn-dark">Search<i
+                <span><input type="text" id="city"><button id ="searchBtn" class="btn btn-dark">Search<i
                             class="fas fa-search-plus"></i></button></span>
                 <div class="searchResults"></div>
             </div>
-            <div class="col-md-9 bg-dark">
+            <div class="col-md-8 bg-dark">
                 <div id="currentWeather">
                 </div>
                 <div class="row" id="futureWeather">
@@ -46,6 +46,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
         <script src ="assets/script.js"></script>
 </body>
 
