--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </h2>
                 <span><input type="text" id="city"><button id ="searchBtn" class="btn btn-dark">Search<i
                             class="fas fa-search-plus"></i></button></span>
-                <div class="searchResults"></div>
+                <div class = "row" id="searchResults"></div>
             </div>
             <div class="col-md-8 bg-dark leftside">
                 <div id="currentWeather">
