tried to work on the retrival couldnt get it to work

--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
                 </h2>
                 <span><input type="text" id="city"><button id ="searchBtn" class="btn btn-dark">Search<i
                             class="fas fa-search-plus"></i></button></span>
-                <div class = "row" id="searchResults"></div>
+                <div id="searchResults"></div>
             </div>
             <div class="col-md-8 bg-dark leftside">
-                <div id="currentWeather">
-                </div>
-                <div class="row" id="futureWeather">
-                </div>
+                <div id="currentWeather"></div>
+                <div class="row" id="futureWeather"></div>
             </div>
         </div>
     </div>
